--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -82,11 +82,11 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 * Albanian: {{t+|sq|stomak}}
 * Amharic: {{t|am|ጨጓራ|m|sc=Ethi}}
 * Arabic: {{t|ar|مَعِدَة|f}}, {{t|ar|مِعْدَة|f}}
-*: Egyptian Arabic: {{t|arz|معدة|f|tr=meʕda|sc=Arab}}
+*: Egyptian Arabic: {{t|arz|معدة|f|tr=meʿda|sc=Arab}}
 * Aragonese: {{t|an|estomago|m|}}
 * Aramaic:
-*: Syriac: [[ܐܣܛܘܡܟܐ]] (’isṬōmkā’) {{g|m}}
-*: Hebrew: [[אסטומכא]] (’isṬōmkā’) {{g|m}}
+*: Syriac: {{t|arc|ܐܣܛܘܡܟܐ|m|tr=’isṬōmkā’|sc=Syrc}}
+*: Hebrew: {{t|arc|אסטומכא|m|tr=’isṬōmkā’|sc=Hebr}}
 * Armenian: {{t+|hy|ստամոքս}}
 * Assamese: {{t-needed|as}}
 * Asturian: {{t+|ast|estómagu|m}}
@@ -146,7 +146,7 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 * Kazakh: {{t+|kk|асқазан|sc=Cyrl}}
 * Khmer: {{t+|km|ក្រពះ|tr=krɑpeah|sc=Khmr}}
 * Kimaragang: {{t|kqr|tiyan}}
-* Korean: {{t+|ko|위|sc=Kore}} ([[胃]])
+* Korean: {{t+|ko|위|sc=Kore}} ({{t+|ko|胃}})
 * Lao: {{t+|lo|ກະເພາະ|sc=Laoo}}
 * Latgalian: {{t|ltg|pasirds}}
 * Latin: {{t|la|stomachus|m}}
@@ -196,8 +196,8 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 * Slovene: {{t+|sl|želodec|m}}
 * Somali: {{t|so|calool}}
 * Sorbian:
-* Lower: {{t|dsb|žołdk|m}}
-*: Upper: {{t|hsb|žołdk|m}}
+*: Lower Sorbian: {{t|dsb|žołdk|m}}
+*: Upper Sorbian: {{t|hsb|žołdk|m}}
 * Spanish: {{t+|es|estómago|m}}
 * Sundanese: {{t|su|ᮘᮥᮛᮤᮂ}}
 * Swahili: {{t+|sw|utumbo|c5|c6}}
@@ -242,8 +242,8 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 * Albanian: {{t+|sq|bark}}
 * Arabic: {{t|ar|مَعِدَة|f}}, {{t|ar|مِعْدَة|f}}, {{t|ar|بَطْن|m}}
 * Aramaic:
-*: Syriac: [[ܟܪܣܐ]] (karsā’) {{g|f}}
-*: Hebrew: [[כרסא]] (karsā’) {{g|f}}
+*: Syriac: {{t|arc|ܟܪܣܐ|f|tr=karsā’|sc=Syrc}}
+*: Hebrew: {{t|arc|כרסא|f|tr=karsā’|sc=Hebr}}
 * Armenian: {{t+|hy|փոր}}
 * Asturian: {{t+|ast|barriga|f}}
 * Azeri: {{t+|az|qarın}}
@@ -261,7 +261,7 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 * Esperanto: {{t|eo|ventro}}
 * Estonian: {{t+|et|kõht}}, {{t|et|magu}}
 * Finnish: {{t+|fi|maha}}, {{t+|fi|vatsa}}
-* French: {{t+|fr|ventre|m}}, {{t+|fr|bedon|m}} ([[pot belly]])
+French: {{t+|fr|ventre|m}}, {{t+|fr|bedon|m}} ([[pot belly]])
 * Georgian: {{t|ka|მუცელი}}
 * German: {{t+|de|Bauch|m}}
 * Greek: {{t+|el|στομάχι|n}}, {{t+|el|κοιλιά|f}}
