--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -147,6 +147,7 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 * Khmer: {{t+|km|ក្រពះ|tr=krɑpeah|sc=Khmr}}
 * Kimaragang: {{t|kqr|tiyan}}
 * Korean: {{t+|ko|위|sc=Kore}} ({{t+|ko|胃}})
+* Kyrgyz: {{t|ky|ашказан}}
 * Lao: {{t+|lo|ກະເພາະ|sc=Laoo}}
 * Latgalian: {{t|ltg|pasirds}}
 * Latin: {{t|la|stomachus|m}}
@@ -155,8 +156,8 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 * Lotud: {{t|dtr|tian}}
 * Luganda: {{t-needed|lg}}
 * Luo: {{t|luo|ich}}
-* Luxembourgish: {{t-needed|lb}}
 {{trans-mid}}
+* Luxembourgish: {{t-needed|lb}}
 * Macedonian: {{t|mk|желудник|m}}, {{t|mk|стомак|m}}
 * Malay: {{t|ms|perut}}
 * Maltese: {{t|mt|stonku|m}}
@@ -275,13 +276,13 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 * Japanese: {{t+|ja|お腹|tr=おなか, o-naka|sc=Jpan}}, {{t+|ja|腹|tr=はら, hara|sc=Jpan}}
 * Kalenjin: {{t|kln|moek}}
 * Kalmyk: {{t|xal|гесн}}
-* Kazakh: {{t+|kk|қарын|sc=Cyrl}}
+* Kazakh: {{t+|kk|қарын|sc=Cyrl}}, {{t|kk|іш}}
 * Khmer: {{t|km|ក្បាលពោះ|tr=kbaal pʊəh|sc=Khmr}}
 * Kikuyu: {{t|ki|nda}}
 * Korean: {{t+|ko|배|sc=Kore}}
 * Kurdish:
 *: Sorani: {{t|ku|زگ|tr=zig|sc=ku-Arab}}, {{t+|ku|ورگ|tr=wirg|sc=ku-Arab}}
-* Kyrgyz: {{t+|ky|карын|sc=Cyrl}}
+* Kyrgyz: {{t+|ky|карын|sc=Cyrl}}, {{t+|ky|курсак}}, {{t+|ky|ич}}
 {{trans-mid}}
 * Latgalian: {{t|ltg|vādars|m}}
 * Latvian: {{t+|lv|vēders|m}}
@@ -296,6 +297,7 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 * Norman: {{t|nrf|ventre|m}} {{qualifier|Jersey, Guernsey}}, {{t|nrf|vãtr|m}} {{qualifier|Sa;rk}}, {{t|nrf|dare}} {{qualifier|continental Normandy}}
 * Norwegian: {{t+|no|mage|m}}, {{t+|no|buk|m}}
 * Old Turkic: {{t|otk|𐰴𐰺𐰣|tr=qarïn}}
+* Pashto: {{t+|ps|خېټه|f|tr=xéṭa}}
 * Persian: {{t+|fa|شکم|tr=šekam|sc=fa-Arab}}
 * Polish: {{t+|pl|brzuch|m}}
 * Portuguese: {{t+|pt|barriga|f}}
