--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -283,8 +283,8 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 * Kurdish:
 *: Sorani: {{t|ku|زگ|tr=zig|sc=ku-Arab}}, {{t+|ku|ورگ|tr=wirg|sc=ku-Arab}}
 * Kyrgyz: {{t+|ky|карын|sc=Cyrl}}, {{t+|ky|курсак}}, {{t+|ky|ич}}
-{{trans-mid}}
 * Latgalian: {{t|ltg|vādars|m}}
+{{trans-mid}}
 * Latvian: {{t+|lv|vēders|m}}
 * Lithuanian: {{t|lt|pilvas|m}}
 * Luhya: {{t|luy|enda}}
@@ -323,6 +323,7 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 * Tuvan: {{t|tyv|хырын}}
 * Ukrainian: {{t|uk|живі́т|m|sc=Cyrl}}, {{t|uk|че́рево|n|sc=Cyrl}}
 * Urdu: {{t|ur|پیٹ|m|tr=pēṭ|sc=ur-Arab}}
+* Uzbek: {{t+|uz|qorin}}
 * Vietnamese: {{t+|vi|bụng}}
 * Volapük: {{t+|vo|bälid}}
 * Welsh: {{t+|cy|bol|m}}
