--- a/en/早/早.16913.wikitext
+++ b/en/早/早.16913.wikitext
@@ -19,7 +19,11 @@
 
 ===Glyph origin===
 {{Han etym}}
-One possibility is that {{lang|zh|早}} is a pictograph of [[sun]] ({{zh-l|*日}}) over the [[horizon]]. However, it is also possible that {{lang|zh|早}} was originally a pictograph of a particular type of [[acorn]]. The shells of these [[acorns]] would be used to make a dark-colored [[dye]]. This color indicated the [[darkness]] before [[sunrise]] and the symbol then took on the meaning of ''[[early]]'' or ''[[fast]]''.
+{{Han compound|日|甲|ls=ic|t1=sun|t2=first}} – when the sun first rises.
+
+In some late bronze inscriptions, it was also written as a {{Han compound|日|棗|ls=psc|c1=s|c2=p|t1=sun|nocap=1}}, with {{zh-l|*棗}} sometimes simplified as {{zh-l|*朿}}. In ancient texts, {{och-l|蚤}} was often used instead.
+
+Alternatively, it is also possible that {{lang|zh|早}} was originally a pictograph of a particular type of [[acorn]]. The shells of these [[acorns]] would be used to make a dark-colored [[dye]]. This color indicated the [[darkness]] before [[sunrise]] and the symbol then took on the meaning of ''[[early]]'' or ''[[fast]]''. {{rfv-etymology|zh}}
 
 ===Pronunciation===
 {{zh-pron
