--- a/en/垟/垟.13091.wikitext
+++ b/en/垟/垟.13091.wikitext
@@ -5,22 +5,32 @@
 {{Han char|rn=32|rad=土|as=06|sn=9|four=48151|canj=GTQ|ids=⿰土羊}}
 
 # (''used in place names'') [[field]] (as in "~ Field")
-
+# {{Hani-second-round simplification of|墙}}
 ====References====
 * {{Han ref|kx=0228.130|dkj=05053|dj=0464.100|hdz=10442.010|uh=579F|ud=22431|bh=CE52|bd=52818}}
 * [http://yedict.com/htm/57/579F.htm yedict.com (叶典)]
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[joeng4]]|y=yeung4}}
+===Etymology 1===
+===Pronunciation===
+{{zh-pron
+|m=yáng
+|c=joeng4
+}}
+===Definitions===
+{{zh-hanzi}}
 
-# {{defn|lang=yue|sort=土06}}
+# {{defn|lang=cmn|sort=土06}}
 
+===Etymology 2===
+{{zh-see|墻|o}}
+====Usage notes====
+[[w:Second round of simplified Chinese characters|Second-round simplification]].
 ----
-
 ==Japanese==
 
 ===Kanji===
@@ -32,13 +42,6 @@
 * {{ja-readings|on=[[よう]] (yō)|kun=}}
 
 ----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[yáng]] ([[yang2]])|wg=yang<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=土06}}
 
 [[fr:垟]]
 [[hu:垟]]
