--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -96,7 +96,7 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, a {{bor|en|frm|p
 * Bengali: {{t|bn|ধাক্কা দেওয়া|tr=dhakka deoa|sc=Beng}}, {{t|bn|ধাক্কানো|tr=dhakkano|sc=Beng}}
 * Bulgarian: {{t+|bg|бутам|sc=Cyrl}}, {{t+|bg|блъскам|sc=Cyrl}}
 * Burmese: {{t+|my|တွန်း|sc=Mymr}}
-* Catalan: {{t+|ca|empènyer}}
+* Catalan: {{t+|ca|empènyer}}, {{t+|ca|empentar}}
 * Chinese:
 *: Mandarin: {{t+|cmn|推|tr=tuī|sc=Hani}}
 * Cornish: {{t|kw|herdhya}}
