--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -46,7 +46,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{etyl|gem-pro|en}} {{m|gem
 * Icelandic: {{t|is|ljóshærður|m}}, {{t|is|ljóshærð|f}}
 * Ido: {{qualifier|♂}} {{t+|io|blondulo}}, {{qualifier|♀}} {{t+|io|blondino}}, {{t+|io|blondo}}
 * Irish: [[fionn]] (of both males and females), [[fear#Irish|fear]] fionn {{g|m}}, [[bean#Irish|bean]] fhionn {{g|f}}
-* Italian: {{t+|it|biondo|m}}
+* Italian: {{t+|it|biondo|m}}, {{t|it|bionda|f}}
 * Japanese: {{t|ja|ブロンド|tr=burondo|sc=Jpan}}, {{t|ja|金髪|tr=きんぱつ, kinpatsu|sc=Jpan}} {{qualifier|blond hair}}
 {{trans-mid}}
 * Korean: {{t|ko|금발인}}, {{t+|ko|금발}} {{qualifier|blond hair}}
