--- a/en/旨/旨.16912.wikitext
+++ b/en/旨/旨.16912.wikitext
@@ -47,9 +47,9 @@
 ===Kanji===
 {{ja-kanji|grade=c|rs=日02}}
 
-# [[Delicious]]
-# [[Appetizing]]
-# [[Clever]] 
+# [[delicious]]
+# [[appetizing]]
+# [[clever]] 
 
 ====Readings====
 * {{ja-readings|on=[[し]] (shi)|kun=[[むね]] (mune), [[うまい]] (umai)}}
