--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -117,6 +117,7 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 * Kikuyu: {{t|ki|Israel}}
 * Korean: {{t|ko|^이스라엘|sc=Hang}}
 {{trans-mid}}
+* Krymchak: {{t|jct|Исраэль}}
 * Kyrgyz: {{t+|ky|Израиль|sc=Cyrl}}
 * Lao: {{t|lo|ອິດສະລະແອນ|sc=Laoo}}
 * Latin: {{t|la|Israel}}
