--- a/en/垈/垈.13067.wikitext
+++ b/en/垈/垈.13067.wikitext
@@ -2,24 +2,42 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=OPG|ids=⿱代土}}
-
-# used for [[place]] [[name]]s
+{{Han char|rn=32|rad=土|as=05|sn=8|four=23104|canj=OPG|ids=⿱代土}}
 
 ====References====
-* {{Han ref|kx=0227.271|dj=0463.150|hdz=10433.010|uh=5788|ud=22408}}
+{{Han ref|kx=0227.271|dj=0463.150|hdz=10433.010|uh=5788}}
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[doi6]]|y=doi6}}
+===Pronunciation===
+{{zh-pron
+|m=dài
+|m-s=
+|c=doi6
+|c-t=
+|g=
+|h=pfs=
+|j=
+|md=
+|mn=
+|mn-t=
+|w=
+|x=
+|mc=y
+|oc=y
+|cat=n
+}}
 
-# {{defn|lang=yue|sort=土05}}
+===Definitions===
+{{zh-hanzi}}
 
-====References====
-* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
+# {{n-g|Only used in place names.}}
+
+===Compounds===
+{{zh-der|小荊垈|牛家垈|垈灣|封家垈|夏家垈}}
 
 ----
 
@@ -41,15 +59,6 @@
 {{ko-hanja|hangeul=대|rv=dae|mr=tae}}
 
 # [[lot]] (site of [[house]], [[집터]])
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[dài]] ([[dai4]])|wg=tai<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=土05}}
 
 [[Category:Ghost kanji]]
 
