--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -131,7 +131,7 @@ From {{etyl|enm|en}} {{m|enm|tortuse}}, {{m|enm|tortuce}}, {{m|enm|tortuge}}, fr
 * Welsh: {{qualifier|tortoise or turtle}} {{t|cy|crwban|m}}
 * West Coast Bajau: {{t|bdr|kekuro}}
 * West Frisian: {{t|fy|skyldpod}}
-* Yiddish: {{qualifier|tortoise or turtle}} {{t|yi|טשערעפּאַכע|f|tr=tsherepakhe|sc=Hebr}}
+* Yiddish: {{t|yi|שילדקרויט}}, {{t|yi|טשערעפּאַכע|f}}
 * Zazaki: {{t|zza|kesa}}
 {{trans-bottom}}
 
