--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -16,7 +16,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 # Attractive and possessing [[charm]].
 #* {{quote-book|year=1963|author={{w|Margery Allingham}}|title={{w|The China Governess}}
 |chapter=5|url=http://openlibrary.org/works/OL2004261W
-|passage=‘It's rather like a '''beautiful''' Inverness cloak one has inherited. Much too good to hide away, so one wears it instead of an overcoat and pretends it's an amusing new fashion.’}}
+|passage=It's rather like a '''beautiful''' Inverness cloak one has inherited. Much too good to hide away, so one wears it instead of an overcoat and pretends it's an amusing new fashion.}}
 #: {{ux|en|Anyone who has ever met her thought she was absolutely '''beautiful'''.}}
 #: {{ux|en|There's a '''beautiful''' lake by the town.}}
 # {{lb|en|of the weather}} Pleasant; clear.
