--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -178,6 +178,7 @@ From {{etyl|enm|en}} {{m|enm|pullen}}, from {{etyl|ang|en}} {{m|ang|pullian||to 
 #*: Never '''pull''' a straight fast ball to leg.
 # {{lb|en|UK}} To draw beer from a pump, keg, or other source.
 #: ''Let's stop at Finnigan's. The barman '''pulls''' a good pint.''
+# {{lb|en|rail transportation|US|of a railroad car}} To [[pull out]] from a [[yard]] or [[station]]; to [[leave]].
 
 ====Synonyms====
 * {{sense|apply force to (something) so it comes toward}} {{l|en|drag}}, {{l|en|tow}}, {{l|en|tug}}, {{l|en|yank}}
