--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -8,7 +8,7 @@
 {{en-noun|~}}
 
 # {{lb|en|countable|slang}} A [[heterosexual]] person.
-# {{lb|en|uncountable|fandom slang}} [[fan fiction|Fan fiction]] based on [[celebrity|celebrities]] or [[fictional]] [[characters]] involved in an [[opposite]]-[[sex]] [[romantic]] and/or [[sexual]] [[relationship]].
+# {{lb|en|uncountable|fandom i}} [[fan fiction|Fan fiction]] based on [[celebrity|celebrities]] or [[fictional]] [[characters]] involved in an [[opposite]]-[[sex]] [[romantic]] and/or [[sexual]] [[relationship]].
 #* '''2005''', Rhiannon Bury, ''Cyberspaces of Their Own: Female Fandoms Online'', Peter Lang (2005), ISBN 0820471186, [http://books.google.com/books?id=wmo_-QhfqeoC&pg=PA207&dq=%22het%22 page 207]:
 #*: Mary Ellen Curtin presented a paper at the 2002 Popular Culture Association conference in which she studied fanfiction archives to discover that black characters appeared far less in both '''het''' and slash fiction than white or even Latino/a characters.
 #* '''2006''', Catherine Driscoll, "One True Pairing: The Romance of Pornography and the Pornography of Romance", in ''Fan Fiction and Fan Communities in the Age of the Internet: New Essays'' (eds. Karen Hellekson & Kristina Busse), McFarland & Company (2006), ISBN 9780786426409, [http://books.google.com/books?id=UgZsi_DOKoQC&pg=PA84&dq=%22vast+majority+of+fan+fiction+is+het%22 page 84]:
