--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -164,7 +164,7 @@ From {{etyl|enm|en}} {{m|enm|felen}}, from {{etyl|ang|en}} {{m|ang|fēlan||to fe
 * Belarusian: {{t|be|адчува́ць|impf|sc=Cyrl}}, {{t|be|адчу́ць|pf|sc=Cyrl}}, {{t|be|чуць|impf|sc=Cyrl}}, {{t|be|пачу́ць|pf|sc=Cyrl}}
 * Bengali: {{t|bn|বোধ করা|sc=Beng}}
 * Bulgarian: {{t+|bg|усе́щам|impf|sc=Cyrl}}, {{t+|bg|чу́вствам|impf|sc=Cyrl}}
-* Burmese: {{t-needed|my}}
+* Burmese: {{t+|my|ခံစား}}
 * Chinese:
 *: Mandarin: {{t+|cmn|感到|tr=gǎndào|sc=Hani}}, {{t+|cmn|感覺|sc=Hani}}, {{t+|cmn|感觉|tr=gǎnjué|sc=Hani}}
 * Czech: {{t+|cs|cítit|impf}}
@@ -191,8 +191,8 @@ From {{etyl|enm|en}} {{m|enm|felen}}, from {{etyl|ang|en}} {{m|ang|fēlan||to fe
 * Khmer: {{t|km|មានអារម្មណ៍|tr=mien aarɑm|sc=Khmr}}
 * Korean: {{t+|ko|느끼다|sc=Kore}}
 * Kyrgyz: {{t+|ky|сезүү|sc=Cyrl}}
-{{trans-mid}}
 * Lao: {{t|lo|ຮູ້ສຶກ|sc=Laoo}}
+{{trans-mid}}
 * Latin: {{t+|la|sentio}}
 * Latvian: {{t|lv|justies}}
 * Lithuanian: {{t+|lt|jausti}}, {{t|lt|pajusti}}
