--- a/en/旱/旱.16921.wikitext
+++ b/en/旱/旱.16921.wikitext
@@ -24,8 +24,8 @@
 |m=hàn
 |c=hon5
 |h=pfs=hôn
-|mn=hōaⁿ/ōaⁿ/hān
-|mn_note=hōaⁿ/ōaⁿ - vernacular, hān - literary
+|mn=hān/qz:ǒaⁿ/tw,xm,zz:ōaⁿ/tw,xm,zz:hōaⁿ
+|mn_note=hān - literary; ǒaⁿ/ōaⁿ/hōaⁿ - vernacular
 |mc=y
 |oc=y
 |ma=y
