--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -92,6 +92,7 @@ From {{etyl|gmh|en}} {{m|gmh|spalden}}, or {{etyl|non|en}} {{m|non|spald}}.
 * {{l|en|pelts}}, {{l|en|slept}}
 
 [[Category:en:Grains]]
+[[Category:en:Hordeeae tribe plants]]
 
 ----
 
