--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -35,7 +35,7 @@ A terser form of {{m|en|ex. gr.}}, both abbreviating {{der|en|la|exemplī grāti
 * Bulgarian: {{t|bg|напр.|sc=Cyrl}} {{qualifier|[[например]]}}
 * Catalan: {{t|ca|p. ex.}} {{qualifier|[[per exemple]]}}
 * Chinese:
-*: Mandarin: {{t+check|cmn|例如|tr=li4 ru2|sc=Hani}}
+*: Mandarin: {{t|cmn|例如|tr=lìrú|sc=Hani}}
 * Czech: {{t+|cs|např.}}
 * Danish: {{t+|da|f.eks.}}, {{t+|da|fx}} {{qualifier|{{t+|da|for eksempel}}}}
 * Dutch: {{t+|nl|bv.}}, {{t+|nl|bijv.}} {{qualifier|{{t+|nl|bijvoorbeeld}}}}
