--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|enm|en}} {{m|enm|finden}}, from {{etyl|ang|en}} {{m|ang|findan}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*finþaną}} (compare West Frisian {{m|fy|fine}}, Low German {{m|nds|finden}}, Dutch {{m|nl|vinden}}, German {{m|de|finden}}, Danish {{m|da|finde}}, Norwegian Bokmål {{m|nb|finne}}, {{cog|nn|-}} and {{cog|sv|finna}}), a secondary verb from {{etyl|ine-pro|en}} {{m|ine-pro|*pent-||to go, pass; path bridge}}, {{m|ine-pro|*pontHo-}} (compare English {{m|en|path}}, Old Irish {{m|sga|étain||I find}}, {{m|sga|áitt||place}}, Latin {{m|la|pōns||bridge}}, Ancient Greek {{m|grc|πόντος||sea}}, Old Armenian {{m|xcl|հուն||ford}}, Avestan {{m|ae|||tr=pantā}} (gen. {{m|ae|tr=paθō}}), Sanskrit {{m|sa|पथ||path}}.
+From {{inh|en|enm|finden}}, from {{inh|en|ang|findan}}, from {{inh|en|gem-pro|*finþaną}} (compare {{cog|fy|fine}}, {{cog|nds|finden}}, {{cog|nl|vinden}}, {{cog|de|finden}}, {{cog|da|finde}}, {{cog|nb|finne}}, {{cog|nn|-}} and {{cog|sv|finna}}), a secondary verb from {{der|en|ine-pro|*pent-||to go, pass; path bridge}}, {{m|ine-pro|*pontHo-}} (compare {{cog|en|path}}, {{cog|sga|étain||I find}}, {{m|sga|áitt||place}}, {{cog|la|pōns||bridge}}, {{cog|grc|πόντος||sea}}, {{cog|xcl|հուն||ford}}, {{cog|ae|tr=pantā}} (gen. {{m|ae|𐬞𐬀𐬚𐬋}}), {{cog|sa|पथ||path}}.
 
 ===Pronunciation===
 * {{enPR|fīnd}}, {{IPA|/faɪnd/|lang=en}}
