--- a/en/偝/偝.11117.wikitext
+++ b/en/偝/偝.11117.wikitext
@@ -4,21 +4,48 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=21227|canj=OLPB|ids=⿰亻背}}
 
-# [[behind]], not [[facing]]
-# [[desert]]
-# to [[disobey]]
-
 ====References====
 * {{Han ref|kx=0111.010|dkj=00865|dj=0237.020|hdz=10188.140|uh=505D|ud=20573|bh=D453|bd=54355}}
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[bui3]]|y=bui3}}
+===Pronunciation===
+{{zh-pron
+|m=bèi
+|m-s=
+|c=bui3,bui6
+|c-t=
+|g=
+|h=pfs=
+|j=
+|md=
+|mn=āiⁿ
+|mn-t=
+|w=
+|x=
+|mc=y
+|oc=y
+|cat=a,v,n
+}}
 
-# {{defn|lang=yue|sort=人09}}
+===Definitions===
+{{zh-hanzi}}
+
+# [[behind]], not [[facing]]
+
+===Verb===
+{{zh-verb}}
+
+# to [[desert]]
+# to [[disobey]]
+
+===Noun===
+{{zh-noun}}
+
+# [[back]]
 
 ----
 
@@ -37,18 +64,9 @@
 ==Korean==
 
 ===Hanja===
-{{ko-hanja|hangeul=배|rv=bae|mr=pae}}
+{{ko-hanja|hangeul=배}}
 
 # {{defn|lang=ko|sort=人09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[bèi]] ([[bei4]])|wg=pei<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
 
 [[zh-min-nan:偝]]
 [[fr:偝]]
