--- a/en/傅/傅.11157.wikitext
+++ b/en/傅/傅.11157.wikitext
@@ -20,7 +20,7 @@
 {{zh-pron
 |m=fù
 |c=fu6
-|mn=pò͘/hū/hù/poh
+|mn=pò͘/tw:hū/qz,xm,zz:hù/tw:poh
 |mn_note=pò͘ - vernacular, hū, hù - literary; poh - dialectal
 |mc=y
 |oc=y
