--- a/en/愆/愆.15642.wikitext
+++ b/en/愆/愆.15642.wikitext
@@ -30,6 +30,9 @@
 
 # [[fault]], [[mistake]], [[error]], [[transgression]]
 
+====Compounds====
+{{zh-der|乾餱以愆|愆陽|三風十愆|愆面|愆義|愆程|愆痾|愆德|愆尤|愆家|惹罪招愆|愆滯|愆期|不愆|愆序|愆伏|愆忒|惹禍招愆|前愆|蓋愆|繩愆糾謬|罪愆}}
+
 ----
 
 ==Japanese==
