--- a/en/坏/坏.13010.wikitext
+++ b/en/坏/坏.13010.wikitext
@@ -24,31 +24,26 @@
 {{zh-see|坯|v}}
 
 ===Etymology 3===
-{{zh-forms}}
+{{zh-forms|alt=坯}}
 
 ===Pronunciation===
 {{zh-pron
-|m=peí
+|m=坏
 |oc=y
 |mc=y
 |cat=n,v
 }}
 
-===Noun===
-{{zh-noun}}
+====Definitions====
+{{zh-hanzi}}
 
-# Unburnt pottery and bricks.
-# A short hill.
-# A wall.
+# [[unburnt]] [[pottery]] and [[brick]]s; [[base]]
+# [[low]] [[hill]]
+# [[wall]]
+# to use [[earth]] to [[fill]] a [[crack]]
 
-====See also====
-* {{sense|unburnt pottery}} {{zh-l|坯}}
-* {{sense|hill}} {{zh-l|坯}}
-
-===Verb===
-{{zh-verb}}
-
-# To use earth to fill a crack.
+====Compounds====
+{{zh-der|fold=1|坏土|拉坏|捏坏|鑿坏}}
 
 ===References===
 * {{R:twedu|A00755}}
