--- a/en/愁/愁.15637.wikitext
+++ b/en/愁/愁.15637.wikitext
@@ -4,9 +4,6 @@
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=13|four=29338|canj=HFP|ids=⿱秋心}}
 
-# [[anxiety]]
-# to [[worry]] about, be [[anxious]]
-
 ====References====
 * {{Han ref|kx=0393.210|dkj=10885|dj=0729.180|hdz=42322.080|uh=6101|ud=24833|bh=B754|bd=46932}}
 
@@ -29,13 +26,17 @@
 |mc=y
 |oc=y
 |ma=y
-|cat=
+|cat=v,n
 }}
 
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|lang=zh}}
+# to [[worry]] about; to be [[anxious]]
+# [[anxiety]]; [[sadness]]
+
+===Compounds===
+{{zh-der|不用愁|愁容|愁坐|愁眉苦目|愁雲|愁緒|愁緒如麻|借酒澆愁|愁眉不展|愁愁|多愁多病|哀愁|愁江恨海|愁眉苦臉|愁帽|千愁萬恨|天愁地慘|憂愁|憂愁夫人|慘綠愁紅|愁顏不展|愁霧|愁霖|愁雲慘霧|愁苦|愁腸百結|愁腸寸斷|愁腸|愁紅慘綠|愁眉苦眼|愁眉淚眼|愁眉|愁海|愁戚戚|愁懼兼心|愁悶|愁思|愁布袋|愁山悶海|愁城|悲愁|不愁|愁腸九轉|四愁詩|意擾心愁|愁蹙|坐困愁城|千愁萬緒|千愁萬慮|今愁古恨|多愁善感|窮愁潦倒|新愁|神愁鬼哭|發愁|懷愁|澆愁|日坐愁城|消愁|掃愁帚|滿面愁容|滿腹憂愁|排愁破涕|消愁解悶|煩愁|淚眼愁眉|消愁釋憒|消愁釋悶|牢愁|窮愁|新愁舊恨|莫愁|馬見愁|鄉愁|舊恨新愁|羈愁|蹙額愁眉|遠愁近慮|篆愁君|鬼見愁|閒愁|舊愁新恨|遠愁|離愁|紅愁綠慘|解愁|莫愁湖|酒病花愁|綠慘紅愁|轉愁為喜}}
 
 ----
 
