--- a/en/昹/昹.16994.wikitext
+++ b/en/昹/昹.16994.wikitext
@@ -1,4 +1,5 @@
 {{character info/new}}
+
 ==Translingual==
 
 ===Han character===
@@ -12,14 +13,25 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[oi2]], [[ngoi2]]|y=oi2, ngoi2}}
+===Pronunciation===
+{{zh-pron
+|m=ǎi
+|c=oi2
+|mc=
+|oc=
+|ma=
+|cat=
+}}
 
-# {{defn|lang=yue|sort=日05}}
+===Definitions===
+{{zh-hanzi}}
 
-====References====
+# {{rfdef|lang=zh}}
+
+===References===
 * [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
 
 ----
@@ -33,15 +45,6 @@
 
 ====Readings====
 * {{ja-readings|on=[[あい]] (ai)|kun=}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[ǎi]] ([[ai3]])|wg=ai<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=日05}}
 
 [[fr:昹]]
 [[hu:昹]]
