--- a/en/昶/昶.16991.wikitext
+++ b/en/昶/昶.16991.wikitext
@@ -19,21 +19,42 @@
 ==Chinese==
 {{zh-forms|alt=㫤}}
 
-===Pronunciation===
+===Etymology 1===
+
+====Pronunciation====
 {{zh-pron
 |m=chǎng
 |c=cong2,zou6,zuk6
-|mc=y
-|oc=y
+|mc=1
+|oc=1
 |ma=
 |cat=
 }}
 
-===Definitions===
+====Definitions====
 {{zh-hanzi}}
 
 # [[long]] [[daytime]] <!-- 《玉篇·日部》：昶，明久。-->
+
+===Etymology 2===
+
+====Pronunciation====
+{{zh-pron
+|m=chàng
+|c=
+|mc=2
+|oc=2
+|ma=
+|cat=
+}}
+
+====Definitions====
+{{zh-hanzi}}
+
 # older variant of [[暢]] <!-- 《七略·雅暢第十七》曰：琴道曰：堯暢逸。又曰：達則兼善天下，無不通暢，故謂之暢。昶與暢同。-->
+
+===Compounds===
+{{zh-der|雅暢/雅昶:smooth and elegant}}
 
 ----
 
