--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -229,7 +229,7 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 * West Coast Bajau: {{t|bdr|betong}}
 * West Frisian: {{t|fy|mage}}
 * Wiradhuri: {{t|wrh|binji}}
-* Wolof: {{t-needed|wo}}
+* Wolof: {{t|wo|biir}}, {{t+|wo|bàq}}
 * Xhosa: {{t-needed|xh}}
 * Yiddish: {{t|yi|מאָגן|m}}
 * Yoruba: {{t-needed|yo}}
