--- a/en/旦/旦.16910.wikitext
+++ b/en/旦/旦.16910.wikitext
@@ -31,6 +31,7 @@ Also simplification of [[詹]], as in [[担]].
 |md=
 |mn=tòaⁿ/tàn
 |mn_note=tòaⁿ - vernacular, tàn - literary
+|mn-t=duan3
 |w=
 |mc=y
 |oc=y
