--- a/en/垂/垂.13061.wikitext
+++ b/en/垂/垂.13061.wikitext
@@ -1,19 +1,14 @@
 {{character info/new}}
-{{also|埀}}
+{{also|埀|乗|重}}
+
 ==Translingual==
 {{stroke order|type=animate}}
-===Etymology===
-{{Han etyl}}
 
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=20104|canj=HJTM}}
 
 ====Derived characters====
-* [[睡]] [[錘]]
-
-====See also====
-* {{l|mul|乗}} <!-- graphically similar, similar etymology -->
-* {{l|mul|重}} <!-- graphically similar, can be confused in compounds -->
+* [[睡]], [[錘]]/[[锤]], [[郵]], [[倕]], [[唾]], [[埵]], [[娷]], [[崜]], [[捶]], [[棰]], [[涶]], [[硾]], [[箠]], [[綞]]/[[缍]], [[腄]], [[菙]], [[諈]], [[陲]], [[甀]],[[㩾]], [[㻔]], [[䅜]], [[䍋]], [[䮔]], [[䳠]], [[厜]], [[𠝶]], [[𡐱]], [[𡑈]], [[𡙇]], [[𢏴]], [[𢔝]], [[𢛉]], [[𢛲]], [[𢻩]], [[𣂩]], [[𣇦]], [[𤷣]], [[𥡭]], [[𦈼]], [[𦖋]], [[𦥻]], [[𧌯]], [[𨉡]], [[𨔠]], [[𨲉]], [[𩃒]], [[𩗰]], [[𩜀]], [[𩣷]], [[𩩞]], [[𩭦]], [[𩸫]], [[𫵌]]
 
 ====References====
 * {{Han ref|kx=0227.160|dkj=05012|dj=0463.020|hdz=10432.050|uh=5782|ud=22402|bh=ABAB|bd=43947}}
@@ -21,7 +16,10 @@
 ----
 
 ==Chinese==
-{{zh-forms}}
+{{zh-forms|alt=埀,𡍮:ancient form,𠂹:ancient form,𠄒:ancient form,𠣔:ancient form}}
+
+===Glyph origin===
+{{Han etym}}
 
 ===Pronunciation===
 {{zh-pron
