--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -36,21 +36,21 @@ From {{etyl|ang|en}} {{m|ang|port}}, from {{etyl|la|en}} {{m|la|portus||port, ha
 * {{sense|right-hand side of a vessel}} {{l|en|starboard}}
 
 =====Derived terms=====
-{{der3|lang=en
-|airport
-|any port in a storm
-|carport
-|Ellesmere Port
-|first port of call
-|Newport
-|outport
-|port authority
-|Port Erin
-|port of call
-|port of entry
-|Port of Spain
-|seaport
-|spaceport
+{{der4|lang=en
+| {{l|en|airport}}
+| {{l|en|any port in a storm}}
+| {{l|en|carport}}
+| {{l|en|Ellesmere Port}}
+| {{l|en|first port of call}}
+| {{l|en|Newport}}
+| {{l|en|outport}}
+| {{l|en|port authority}}
+| {{l|en|Port Erin}}
+| {{l|en|port of call}}
+| {{l|en|port of entry}}
+| {{l|en|Port of Spain}}
+| {{l|en|seaport}}
+| {{l|en|spaceport}}
 }}
 
 =====Translations=====
