--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -88,6 +88,7 @@ From {{etyl|enm|en}} {{m|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|e
 {{trans-mid}}
 * Italian: {{t+|it|tagliato}}
 * Portuguese: {{t|pt|lapidado}}
+* Romanian: {{t+|ro|tăiat}}
 * Russian: {{t+|ru|огранённый}}
 * Spanish: {{t+|es|tallado}}
 {{trans-bottom}}
