--- a/en/偬/偬.11132.wikitext
+++ b/en/偬/偬.11132.wikitext
@@ -3,7 +3,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=OPKP|ids=⿰亻怱}}
+{{Han char|rn=9|rad=人|as=09|sn=11|four=2723.2|canj=OPKP|ids=⿰亻怱}}
 
 # [[urgent]]
 
