--- a/en/傘/傘.11179.wikitext
+++ b/en/傘/傘.11179.wikitext
@@ -1,9 +1,13 @@
 {{character info/new}}
 {{also|伞}}
+
 ==Translingual==
 
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=80408|canj=OOOJ|ids=⿱人⿻十𠈌}}
+
+====Derived characters====
+* {{l|mul|[[𦅮]], [[𬠮]], [[𠑋]]}}
 
 ====References====
 * {{Han ref|kx=0113.200|dkj=00966|dj=0241.100|hdz=10198.130|uh=5098|ud=20632|bh=B3CA|bd=46026}}
@@ -12,6 +16,9 @@
 
 ==Chinese==
 {{zh-forms|s=伞|alt=繖,𢄻,伞,𠋔,𠌂,𠍘,𠎃,𡙘,𡙫,𦇕,仐}}
+
+===Glyph origin===
+{{rfe|lang=zh}}
 
 ===Pronunciation===
 {{zh-pron
