--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -3,7 +3,7 @@
 {{wikipedia}}
 
 ===Alternative forms===
-* {{l|en|eikon}}, {{l|en|ikon}} {{qualifier|only in sense of religious image|lang=en}}
+* {{l|en|eikon}}, {{l|en|ikon}} {{qualifier|only in sense of religious image}}
 
 ===Etymology===
 From {{etyl|la|en}} {{m|la|icon}}, from {{etyl|grc|en}} {{m|grc|εἰκών||likeness, image, portrait}}. Eastern Orthodox Church sense is attested from 1833. Computing sense first recorded in 1982.
