--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From {{inh|en|enm|finden}}, from {{inh|en|ang|findan}}, from {{inh|en|gem-pro|*finþaną}} (compare {{cog|fy|fine}}, {{cog|nds|finden}}, {{cog|nl|vinden}}, {{cog|de|finden}}, {{cog|da|finde}}, {{cog|nb|finne}}, {{cog|nn|-}} and {{cog|sv|finna}}), a secondary verb from {{der|en|ine-pro|*pent-||to go, pass; path bridge}}, {{m|ine-pro|*pontHo-}} (compare {{cog|en|path}}, {{cog|sga|étain||I find}}, {{m|sga|áitt||place}}, {{cog|la|pōns||bridge}}, {{cog|grc|πόντος||sea}}, {{cog|xcl|հուն||ford}}, {{cog|ae|𐬞𐬀𐬥𐬙𐬁}} (gen. {{m|ae|𐬞𐬀𐬚𐬋}}), {{cog|sa|पथ||path}}.
+From {{inh|en|enm|finden}}, from {{inh|en|ang|findan}}, from {{inh|en|gem-pro|*finþaną}} (compare {{cog|fy|fine}}, {{cog|nds|finden}}, {{cog|nl|vinden}}, {{cog|de|finden}}, {{cog|da|finde}}, {{cog|nb|finne}}, {{cog|nn|-}} and {{cog|sv|finna}}), a secondary verb from {{der|en|ine-pro|*pent-||to go, pass; path bridge}}, {{m|ine-pro|*pontHo-}} (compare {{cog|en|path}}, {{cog|sga|étain||I find}}, {{m|sga|áitt||place}}, {{cog|la|pōns||bridge}}, {{cog|grc|πόντος||sea}}, {{cog|xcl|հուն||ford}}, {{cog|ae|}} (gen. {{m|ae|}}), {{cog|sa|पथ||path}}.
 
 ===Pronunciation===
 * {{enPR|fīnd}}, {{IPA|/faɪnd/|lang=en}}
