--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -209,8 +209,9 @@ Compare {{cog|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}}), from {{d
 * Cheyenne: {{t|chy|	heóveamėške}}
 * Chinese:
 *: Cantonese: {{t|yue|牛油|tr=ngau4 jau4|sc=Hani}}
-*: Hakka: {{t|hak|牛油|tr=ngiù-yù|sc=Hani}}
+*: Hakka: {{t|hak|牛油|tr=ngiù-yù|sc=Hani}}, {{t|hak|乳油|tr=nen-yù}}, {{t|hak|白塔|tr=pat-tá}}
 *: Mandarin: {{t+|cmn|黃油|sc=Hani}}, {{t+|cmn|黄油|tr=huángyóu|sc=Hani}}, {{t+|cmn|牛油|tr=niúyóu|sc=Hani}}, {{t|cmn|白脫|sc=Hani}}, {{t|cmn|白脱|tr=báituō|sc=Hani}}
+*: Min Nan: {{t+|nan|牛油|tr=gû-iû}}, {{t|nan|bá-tah}} {{qualifier|Taiwan}}
 *: Wu: {{t|wuu|白脫|sc=Hani}}, {{t|wuu|白脱|tr=bah theh|sc=Hani}}, {{t|wuu|牛油|tr=nyeu yeu|sc=Hani}}, {{t|wuu|黃油|sc=Hani}}, {{t|wuu|黄油|tr=huaon yue|sc=Hani}}
 * Coptic: {{t|cop|ϭⲉⲗⲓ}}
 * Cornish: {{t|kw|amanyn|m}}
@@ -270,10 +271,10 @@ Compare {{cog|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}}), from {{d
 * Lithuanian: {{t|lt|sviestas|m}}
 * Lojban: {{t+|jbo|matne}}
 * Lombard: {{t|lmo|butter|m}} {{qualifier|Milan}}, {{t|lmo|bütìr|m}} {{qualifier|Occidental}}
+{{trans-mid}}
 * Low German:
 *: Dutch Low Saxon: {{t+|nds-nl|botter|f}}
 *: German Low German: {{t+|nds-de|Botter|f}}
-{{trans-mid}}
 * Luxembourgish: {{t+|lb|Botter|m}}
 * Macedonian: {{t|mk|путер|m}}
 * Malay: {{t+|ms|mentega}}
