--- a/en/坨/坨.13035.wikitext
+++ b/en/坨/坨.13035.wikitext
@@ -48,7 +48,8 @@
 ===Hanzi===
 {{cmn-hanzi|pin=[[tuó]] ([[tuo2]])|wg=t'o<sup>2</sup>}}
 
-# {{defn|lang=cmn|sort=土05}}
+# a [[lump]], [[heap]]
+# [[spherical]] [[object]]
 
 ----
 
