--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -17,7 +17,7 @@
 
 ==Chinese==
 {{rfc|lang=zh|Needs to be split by part of speech}}
-{{zh-forms}}
+{{zh-forms|alt=昰}}
 
 ===Glyph origin===
 {{Han etyl}}
