--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -42,6 +42,7 @@ From {{etyl|enm|en}} {{m|enm|tortuse}}, {{m|enm|tortuce}}, {{m|enm|tortuge}}, fr
 * Bulgarian: {{qualifier|tortoise or turtle}} {{t+|bg|костенурка|f|tr=kostenúrka}}
 * Burmese: {{qualifier|tortoise or turtle}} {{t+|my|လိပ်|sc=Mymr}}
 * Catalan: {{t+|ca|tortuga|f}}
+* Central Dusun: {{t|dtp|buu}}
 * Central Melanau: {{t|mel|kejaa}}
 * Chinese:
 *: Mandarin: {{qualifier|tortoise or turtle}} {{t+|cmn|龜|sc=Hani}}, {{t+|cmn|龟|tr=guī|sc=Hani}}, {{t+|cmn|烏龜|sc=Hani}}, {{t+|cmn|乌龟|tr=wūguī|sc=Hani}}, {{t+|cmn|王八|tr=wángba|sc=Hani}}, {{t|cmn|草龜|sc=Hani}}, {{t|cmn|草龟|tr=cǎoguī|sc=Hani}}
@@ -78,9 +79,9 @@ From {{etyl|enm|en}} {{m|enm|tortuse}}, {{m|enm|tortuce}}, {{m|enm|tortuge}}, fr
 * Lao: {{qualifier|tortoise or turtle}} {{t+|lo|ເຕົ່າ|sc=Laoo}}
 * Latin: {{t+|la|testudo|m}}
 * Latvian: {{qualifier|tortoise or turtle}} {{t+|lv|bruņurupucis|m}}
+{{trans-mid}}
 * Lithuanian: {{qualifier|tortoise or turtle}} {{t+|lt|vėžlys|m}}
 * Luxembourgish: {{t|lb|Landdeckelsmouk|f}}
-{{trans-mid}}
 * Macedonian: {{qualifier|tortoise or turtle}} {{t|mk|желка|f|tr=žélka}}
 * Malay: {{t|ms|kura-kura}}
 * Malayalam: {{t+|ml|ആമ|sc=Mlym}}
