--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -169,7 +169,7 @@ From {{etyl|ojp|ja|sort=ほし}}. Possible cognates include {{cog|ko|별||star}}
 ==Vietnamese==
 
 ===Han character===
-{{vi-hantu|[[tinh]]|rs=日05}}
+{{vi-hantu|[[tinh]], [[tình]]|rs=日05}}
 
 # {{defn|lang=vi|sort=日05}}
 
