--- a/en/f/flaxen.6882.wikitext
+++ b/en/f/flaxen.6882.wikitext
@@ -11,8 +11,8 @@
 {{head|en|adjective}}
 
 # Made of or resembling [[flax]] fibers.
-#* ''The couple and their children have '''flaxen''' hair''.
-# a pale yellow brown; the colour of dried flax stalks and of the fiber obtained therefrom.
+#* ''The couple and their children have '''flaxen''' hair.''
+# A pale yellow brown; the colour of dried flax stalks and of the fiber obtained therefrom.
 #: {{color panel|C2B280}}
 
 ====Translations====
