--- a/en/假/假.11095.wikitext
+++ b/en/假/假.11095.wikitext
@@ -15,7 +15,7 @@
 
 ===Glyph origin===
 {{Han etym}}
-{{Han compound|人|alt1=亻|叚|ls=psc|c1=s|c2=p}}.
+{{Han compound|人|叚|ls=psc|c1=s|c2=p}}.
 
 ===Pronunciation 1===
 {{zh-pron
