--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -338,6 +338,7 @@ The noun is from {{etyl|ang|en}} {{m|ang|feoht}}, from the verb; compare Dutch {
 * Dutch: {{t+|nl|gevecht|n}}
 * Finnish: {{t+|fi|taistelu}}, {{t+|fi|tappelu}}
 * French: {{t+|fr|lutte|f}}, {{t+|fr|combat|m}}
+* Galician: {{t|gl|loita|f}}
 * German: {{t+|de|Kampf|m}}
 * Hebrew: {{t+|he|קרב|m|tr=kráv}}, {{t|he|לחימה|f|tr=lekhimá}}, {{t|he|ריב|m|tr=rív}}, {{t+|he|מאבק|m|tr=ma`avák}}
 * Hungarian: {{t+|hu|küzdelem}}
